  * Fix "bzr builddeb" if last upload was not to a Ubuntu release pocket.
    LP: #709263
  * If possible use uscan to find the latest upstream version string.
    LP: #295274
  * Add --snapshot option to merge-upstream.
  * 'bzr merge-upstream' now also works in merge mode, and will simply
    add a new entry for new upstream versions.
  * merge-upstream will now keep epochs around. LP: #622678

 -- Jelmer Vernooij <jelmer@debian.org>  Sat, 29 Jan 2011 04:29:41 +0100

bzr-builddeb (2.5) unstable; urgency=low

  [ Colin Watson ]
  * Consider a .dsc without a Format: to be Format: 1.0.

  [ Jelmer Vernooij ]
  * export now uses the timestamp of the last revision, making them more
    deterministic, and so hopefully producing the same tarballs when it is
    used for that.
  * Fix use of getattr to have 3 arguments to avoid exception. (LP: #572093)
  * Implement the automatic_tag_name hook so that "bzr tag" with no arguments
    will tag based on the version in debian/changelog.
  * Support upstream/VERSION tags, for compatibility with git-
    buildpackage. LP: #551362
  * Support upstream tarballs without a pristine tar delta.
  * Support -r argument to import-upstream.

  [ Robert Collins ]
  * Add import-upstream command which imports an upstream - useful for
    migrating existing packaging branches into pristine-tar using mode.
  * Stop stripping .bzrignore from tarball imports. LP: #496907
  * Make the upstream branch authoritative for file ids when importing a
    tarball, stopping errors when files are renamed. LP: #588060

  [ James Westby ]
  * Add a --package-merge option to builddeb to build with the -v and -sa
    appropriate when doing a merge from Debian or similar. LP: #576027
  * Fixed a logic error that stops -r working in merge-upstream. LP: #594575

  [ Jelmer Vernooij ]
  * Determine Bazaar home directory using bzrlib to prevent test
    isolation issues. Closes: #614125
  * Bump standards version to 3.9.1 (no changes).
