@@ -35,8 +35,10 @@ bzr-builddeb (2.5.1) UNRELEASED; urgency=low
   * 'bzr merge-upstream' now also works in merge mode, and will simply
     add a new entry for new upstream versions.
   * merge-upstream will now keep epochs around. LP: #622678
+  * 'bzr builddeb' now searches for directories relative to the working
+    tree rather than relative to the branch. Closes: #676456
 
- -- Jelmer Vernooij <jelmer@debian.org>  Sat, 29 Jan 2011 04:29:41 +0100
+ -- Jelmer Vernooij <jelmer@debian.org>  Sun, 30 Jan 2011 23:09:45 +0100
 
 bzr-builddeb (2.5) unstable; urgency=low
 
